[Android] feat: implemented splash screen && added buttons, idications && updated localized files
