# shared/src/api/openapi.yaml
@@ -441,3 +441,10 @@ components:
         type:
           title: Error Type
           type: string
+  securitySchemes:
+    Authorization:
+      description: Authorization
+      scheme: bearer
+      type: http
+security:
+  - Authorization: []
